<resources>
    <string name="app_name">GrooveRadar</string>
    <string name="text_register">Register</string>
    <string name="button_register">Register</string>
    <string name="edit_confirm_password">Confirm Password</string>
    <string name="edit_register_password">Password (at least 8 characters)</string>
    <string name="edit_register_email">E-mail address</string>
    <string name="text_login">Login</string>
    <string name="edit_login_username">Username</string>
    <string name="edit_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_register_here">No account yet? Register here!</string>
    <string name="edit_register_username">Username (no more than 16 characters)</string>
    <string name="text_wait">Please wait while results load...</string>
    <string name="text_rate_first">Be the first user to rate this arcade!</string>
    <string name="text_show_comments">Show Comments</string>
    <string name="button_submit">SUBMIT</string>
    <string name="text_see_all_games">Click here to see all games at this arcade!</string>
    <string name="name">Arcade Name</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="phone_number">Phone Number</string>
    <string name="addresslabel">Address:</string>
    <string name="address">Address</string>
    <string name="hourlabel">Hours:</string>
    <string name="hours">Hours</string>
    <string name="infolabel">Arcade Info:</string>
    <string name="info">Arcade Info</string>
</resources>